debhelper (9.20151219+unreleased) UNRELEASED; urgency=medium

  * dh_strip: Document that dbgsym packages are built by
    default.
  * Dh_Lib: Cache the results of getpackages.

 -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 10:30:08 +0000

debhelper (9.20151219) unstable; urgency=medium

  * dh_installinit: Apply patch from Reiner Herrmann to sort
    temporary files put in postinst.  (Closes: #806392)
  * dh_installinit: Import change from Ubuntu to add /g
    modifier when substituting the auto-script snippets.
  * dh_*: Add /g when substituting the auto-script snippts in
    other commands as well.
  * dh_strip: Do not assume that ELF binaries have a Build-Id.
    Thanks to Helmut Grohne for spotting this issue.
    (Closes: #806814)
  * dh_strip: Enable generation of dbgsym packages by default.
    Thanks to Ansgar Burchardt and Paul Tagliamonte for
    implementing the DAK side of this feature.
    (Closes: #510772)

 -- Niels Thykier <niels@thykier.net>  Sat, 19 Dec 2015 22:01:53 +0000

debhelper (9.20151126) unstable; urgency=medium

  * dh_compress: Apply patch from Michael Biebl to skip
    compression of .devhelp2 files.  (Closes: #789153)
  * dh_installinit: Undo "Disable initscripts when a package is
    removed (but not yet purged)". (Reopens #749400,
    Closes: #806276)

 -- Niels Thykier <niels@thykier.net>  Thu, 26 Nov 2015 18:06:06 +0100

debhelper (9.20151117) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_clean: Temporarily interpret the absence of d/compat and
    DH_COMPAT to mean compat 5.  This is to avoid breaking
    packages that rely on cdbs to set debian/compat to 5 during
    the build.  This temporary work around will live until
    d/compat becomes mandatory.  (Closes: #805404)

  [ Translations ]
  * Update German translation (Chris Leick)
    (Closes: #802198)

 -- Niels Thykier <niels@thykier.net>  Tue, 17 Nov 2015 21:29:17 +0100

debhelper (9.20151116) unstable; urgency=medium

  [ Niels Thykier ]